[globo] - Estilo pronto

--- a/src/scss/config/_color.scss
+++ b/src/scss/config/_color.scss
@@ -5,6 +5,6 @@ $cinza-claro: #eeeeee;
 $cinza-medio: #ccc;
 $cinza-escuro: #858585;
 
-$azul-medios: #004861;
+$azul-medio: #004761;
 $amarelo-medio: #d5e11f;
 
