--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,5 @@
 @import 'base';
-
-
-$color: #0ff;
-body {
-  background: $color;
-}
+@import 'components/header';
+@import 'components/advertising';
+@import 'components/section';
+@import 'components/footer';
