--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,3 +1,14 @@
-@import 'variables';
-@import "fontawesome/fontawesome.scss";
+
+@import url('https://use.fontawesome.com/releases/v5.6.3/css/all.css');
+@import "~bootstrap/scss/bootstrap-reboot";
+@import 'config/variables';
 @import "~bootstrap/scss/bootstrap-grid";
+@import 'config/color';
+
+body{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a{
+  transition: color 300ms ease-in-out 0ms;
+}
